# gzdec

./: Makefile  README.md  Readme.md  config.status  configure  libtool
src/: Makefile  Makefile.am  Makefile.in  gstgzdec.c  gstgzdec.h  libgstgzdec.la  libgstgzdec_la-gstgzdec.lo  movida
